--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -13,10 +13,10 @@ task:
   recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-5
-  batch_size: 32
-  trajectories: 675
+  learning_rate: 1.0e-4
+  weight_decay: 0
+  batch_size: 1
+  trajectories: 1
   n_timesteps: 50
   epochs: 200
   pretraining: 100
@@ -32,7 +32,7 @@ task:
     n_viz: 5
 
   validation:
-    interval: 10
+    interval: 1
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during training
     rollouts: 135 # Number of trajectories that are going to be used to compute the rollout loss during training
     n_steps: 10
