--- a/config/gns.yaml
+++ b/config/gns.yaml
@@ -1,7 +1,7 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-random_seed: 12
+random_seed: 99999
 retrain: False # Start training a new model if True. Continue training the most recent version of the model if False.
 wandb_mode: online
 directory: deformable_plate
@@ -13,8 +13,8 @@ task:
   recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-4
+  learning_rate: 1.0e-4
+  weight_decay: 0
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
