--- a/config/trapez.yaml
+++ b/config/trapez.yaml
@@ -13,8 +13,8 @@ task:
   recurrence: rkn # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
-  weight_decay: 1.0e-5
+  learning_rate: 1.0e-4
+  weight_decay: 0
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
