--- a/config/five.yaml
+++ b/config/five.yaml
@@ -8,21 +8,21 @@ directory: deformable_plate
 
 task:
   task: trapez # trapez/poisson
-  model: supervised # mgn/supervised/self-supervised
-  ggns: True # T/F
+  model: self-supervised # mgn/supervised/self-supervised
+  ggns: False # T/F
   recurrence: gru # False/name
   sequence: 5
   poisson_ratio: False # Link to use global with model
-  learning_rate: 5.0e-4
+  learning_rate: 1.0e-4
   weight_decay: 0
   batch_size: 32
   trajectories: 675
   n_timesteps: 50
   epochs: 200
   pretraining: 100
-  reduced: True
+  reduced: False
   subsampling: ifp # if voxel, reduced must be False. Non-recurrent only!
-  imputation: [5]
+  imputation: [1, 5]
 
   test:
     trajectories: 135 # Number of trajectories that are going to be used to compute the validation loss during evaluation
@@ -51,6 +51,6 @@ model:
   heterogeneous: False
 
 poisson:
-  learning_rate: 3.0e-4
-  weight_decay: 1.0e-5
+  learning_rate: 5.0e-4
+  weight_decay: 2.0e-4
   epochs: 200
