Change config files.

--- a/config/gr-ggns_R.yaml
+++ b/config/gr-ggns_R.yaml
@@ -12,7 +12,7 @@ directory: deformable_plate # Name of the data directory and dataset.
 task:
   task: trapez # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
   model: supervised # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
-  ggns: False # If True, the update mechanism of GGNS will be used.
+  ggns: True # If True, the update mechanism of GGNS will be used.
   recurrence: gru # Type of recurrence. Only GRU or False are allowed.
   sequence: 5 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
   poisson_ratio: False # If True, provides ground-truth Poisson's ratio values as global a global variable.
@@ -23,7 +23,7 @@ task:
   n_timesteps: 50 # Trajectory length. <= 50.
   epochs: 200 # Number of training epochs.
   pretraining: 100 # Ignore, does not do anything
-  reduced: False # If True, reduced GGNS settings are going to be used.
+  reduced: True # If True, reduced GGNS settings are going to be used.
   imputation: [5] # Set of imputation parameters the model will be evaluated for during validation. [5] to save time, does not affect test-results.
 
   test:
