--- a/config/gr-ggns_N.yaml
+++ b/config/gr-ggns_N.yaml
@@ -12,7 +12,7 @@ directory: deformable_plate # Name of the data directory and dataset.
 task:
   task: trapez # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
   model: supervised # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
-  ggns: False # If True, the update mechanism of GGNS will be used.
+  ggns: True # If True, the update mechanism of GGNS will be used.
   recurrence: gru # Type of recurrence. Only GRU or False are allowed.
   sequence: 5 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
   poisson_ratio: False # If True, provides ground-truth Poisson's ratio values as global a global variable.
@@ -47,7 +47,7 @@ model:
   layer_norm: False # Layer normalization.
   layers: 1 # Number of MLP-layers.
   noise: 0.01 # Training noise.
-  pc_noise: 0.0 # Sensor data noise.
+  pc_noise: 0.01 # Sensor data noise.
   aggregation: mean # Message-passing aggregation function. Can be mean, max, min.
   message_passing_steps: 5 # Number of message-passing blocks.
   heterogeneous: False # Ignore, does not do anything.
