--- a/config/gr-ggns_R.yaml
+++ b/config/gr-ggns_R.yaml
@@ -6,7 +6,7 @@ import_path: "default.yaml"
 random_seed: 0 # Configure the random seed.
 retrain: False # If True, the training of existing models with the same configuration is not continued. Instead, a new model will be trained, overwriting the existing model.
 wandb_mode: online # If metrics should be uploaded to wandb or not (online/offline).
-group: GR-GNS_R # Name of the group.
+group: GR-GGNS_R # Name of the group.
 directory: deformable_plate # Name of the data directory and dataset.
 
 task:
