--- a/config/ss_gr-ggns.yaml
+++ b/config/ss_gr-ggns.yaml
@@ -1,17 +1,17 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-# Use this file to run the GR-GGNS (R) experiments.
+# Use this file to run the GR-GGNS experiments.
 
 random_seed: 0 # Configure the random seed.
 retrain: False # If True, the training of existing models with the same configuration is not continued. Instead, a new model will be trained, overwriting the existing model.
 wandb_mode: online # If metrics should be uploaded to wandb or not (online/offline).
-group: GR-GGNS_R # Name of the group.
+group: SS_GR-GGNS # Name of the group.
 directory: deformable_plate # Name of the data directory and dataset.
 
 task:
   task: trapez # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
-  model: supervised # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
+  model: self-supervised # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
   ggns: True # If True, the update mechanism of GGNS will be used.
   recurrence: gru # Type of recurrence. Only GRU or False are allowed.
   sequence: 5 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
@@ -23,7 +23,7 @@ task:
   n_timesteps: 50 # Trajectory length. <= 50.
   epochs: 200 # Number of training epochs.
   pretraining: 100 # Ignore, does not do anything
-  reduced: True # If True, reduced GGNS settings are going to be used.
+  reduced: False # If True, reduced GGNS settings are going to be used.
   imputation: [5] # Set of imputation parameters the model will be evaluated for during validation. [5] to save time, does not affect test-results.
 
   test:
