--- a/config/ggns.yaml
+++ b/config/ggns.yaml
@@ -14,7 +14,7 @@ task:
   model: mgn # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
   ggns: True # If True, the update mechanism of GGNS will be used.
   recurrence: False # Type of recurrence. Only GRU or False are allowed.
-  sequence: 5 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
+  sequence: 1 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
   poisson_ratio: False # If True, provides ground-truth Poisson's ratio values as global a global variable.
   learning_rate: 5.0e-4 # Learning rate.
   weight_decay: 0 # L2 regularization parameter.
@@ -24,6 +24,7 @@ task:
   epochs: 200 # Number of training epochs.
   pretraining: 100 # Ignore, does not do anything
   reduced: False # If True, reduced GGNS settings are going to be used.
+  subsampling: ifp # Subsampling method. If task == trapez, use ifp. If task == poisson, mesh and voxel are also possible.
   imputation: [5] # Set of imputation parameters the model will be evaluated for during validation. [5] to save time, does not affect test-results.
 
   test:
