--- a/config/mlp.yaml
+++ b/config/mlp.yaml
@@ -1,22 +1,22 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-# Use this file to run the GGNS (N)-bseline experiments.
+# Use this file to run the MLP-Poisson experiments.
 
 random_seed: 0 # Configure the random seed.
 retrain: False # If True, the training of existing models with the same configuration is not continued. Instead, a new model will be trained, overwriting the existing model.
 wandb_mode: online # If metrics should be uploaded to wandb or not (online/offline).
-group: GGNS_N # Name of the group.
+group: MLP-Poisson # Name of the group.
 directory: deformable_plate # Name of the data directory and dataset.
 
 task:
-  task: trapez # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
+  task: poisson # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
   model: mgn # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
-  ggns: True # If True, the update mechanism of GGNS will be used.
-  recurrence: False # Type of recurrence. Only GRU or False are allowed.
+  ggns: False # If True, the update mechanism of GGNS will be used.
+  recurrence: mlp # Type of recurrence. Only GRU or False are allowed.
   sequence: 1 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
   poisson_ratio: False # If True, provides ground-truth Poisson's ratio values as global a global variable.
-  learning_rate: 5.0e-4 # Learning rate.
+  learning_rate: 1.0e-4 # Learning rate.
   weight_decay: 0 # L2 regularization parameter.
   batch_size: 32 # Batch size
   trajectories: 675 # Number of Trajectories used during training. <= 675.
@@ -48,7 +48,7 @@ model:
   layer_norm: False # Layer normalization.
   layers: 1 # Number of MLP-layers.
   noise: 0.01 # Training noise.
-  pc_noise: 0.01 # Sensor data noise.
+  pc_noise: 0.0 # Sensor data noise.
   aggregation: mean # Message-passing aggregation function. Can be mean, max, min.
   message_passing_steps: 5 # Number of message-passing blocks.
   heterogeneous: False # Ignore, does not do anything.
