--- a/config/ifp.yaml
+++ b/config/ifp.yaml
@@ -1,22 +1,22 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-# Use this file to run the MGN-bseline experiments.
+# Use this file to run the IFP-Poisson experiments.
 
 random_seed: 0 # Configure the random seed.
 retrain: False # If True, the training of existing models with the same configuration is not continued. Instead, a new model will be trained, overwriting the existing model.
 wandb_mode: online # If metrics should be uploaded to wandb or not (online/offline).
-group: MGN # Name of the group.
+group: IFP-Poisson # Name of the group.
 directory: deformable_plate # Name of the data directory and dataset.
 
 task:
-  task: trapez # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
+  task: poisson # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
   model: mgn # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
   ggns: False # If True, the update mechanism of GGNS will be used.
-  recurrence: False # Type of recurrence. Only GRU or False are allowed.
+  recurrence: mlp # Type of recurrence. Only GRU or False are allowed.
   sequence: 1 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
   poisson_ratio: False # If True, provides ground-truth Poisson's ratio values as global a global variable.
-  learning_rate: 5.0e-4 # Learning rate.
+  learning_rate: 1.0e-4 # Learning rate.
   weight_decay: 0 # L2 regularization parameter.
   batch_size: 32 # Batch size
   trajectories: 675 # Number of Trajectories used during training. <= 675.
