--- a/config/mesh.yaml
+++ b/config/mesh.yaml
@@ -1,22 +1,22 @@
 name: "DEFAULT"   # MUST BE DEFAULT
 import_path: "default.yaml"
 
-# Use this file to run the MGN (M)-bseline experiments.
+# Use this file to run the Mesh-Poisson experiments.
 
 random_seed: 0 # Configure the random seed.
 retrain: False # If True, the training of existing models with the same configuration is not continued. Instead, a new model will be trained, overwriting the existing model.
 wandb_mode: online # If metrics should be uploaded to wandb or not (online/offline).
-group: MGN_M # Name of the group.
+group: Mesh-Poisson # Name of the group.
 directory: deformable_plate # Name of the data directory and dataset.
 
 task:
-  task: trapez # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
+  task: poisson # If poisson, the system parameter estimator will be trained. If trapez, the whole model (inkl. forward dynamics predictor) will be trained.
   model: mgn # mgn for baseline models, supervised and self-supervised for versions of RK-GNS.
   ggns: False # If True, the update mechanism of GGNS will be used.
-  recurrence: False # Type of recurrence. Only GRU or False are allowed.
+  recurrence: mlp # Type of recurrence. Only GRU or False are allowed.
   sequence: 1 # Length of the sub-sequences for Truncated Backpropagation Trough Time.
-  poisson_ratio: True # If True, provides ground-truth Poisson's ratio values as global a global variable.
-  learning_rate: 5.0e-4 # Learning rate.
+  poisson_ratio: False # If True, provides ground-truth Poisson's ratio values as global a global variable.
+  learning_rate: 1.0e-4 # Learning rate.
   weight_decay: 0 # L2 regularization parameter.
   batch_size: 32 # Batch size
   trajectories: 675 # Number of Trajectories used during training. <= 675.
@@ -24,7 +24,7 @@ task:
   epochs: 200 # Number of training epochs.
   pretraining: 100 # Ignore, does not do anything
   reduced: False # If True, reduced GGNS settings are going to be used.
-  subsampling: ifp # Subsampling method. If task == trapez, use ifp. If task == poisson, mesh and voxel are also possible.
+  subsampling: mesh # Subsampling method. If task == trapez, use ifp. If task == poisson, mesh and voxel are also possible.
   imputation: [5] # Set of imputation parameters the model will be evaluated for during validation. [5] to save time, does not affect test-results.
 
   test:
