--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-torch
-torch-geometric
-matplotlib
-PyYAML
-torch-cluster
-pandas
-tfrecord
-protobuf==3.20.0
-wandb
+numpy==1.25.0
+torch==2.0.1
+torch-geometric==2.3.1
+torch-cluster==1.6.1
+PyYAML==6.0
+scipy==1.10.1
+tqdm==4.65.0
+matplotlib==3.7.1
+wandb==0.15.4
+pandas==2.0.2
